--- a/hr-user/pom.xml
+++ b/hr-user/pom.xml
@@ -15,7 +15,7 @@
 	<description>User Microservice</description>
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2021.0.7</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR12</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
